--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "jest": {
     "preset": "jest-puppeteer",
-    "verbose": true
+    "verbose": true,
+    "testEnvironment": "jsdom"
   }
 }
