--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,6 @@
       "module": "commonjs",
       "target": "es6"
     },
-    "exclude": ["node_modules", "**/node_modules/*"]
+    "exclude": ["node_modules", "**/node_modules/*"],
+
   }
