--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   },
   "jest": {
     "preset": "jest-puppeteer",
-    "verbose": true,
-    "testEnvironment": "jsdom"
+    "verbose": true
   }
 }
